# superturtle

./: .gitignore  .readthedocs.yaml  Makefile  README.md  README.rst  pyproject.toml
documentation/: requirements.txt
documentation/doc_examples/: __init__.py
documentation/doc_examples/source/: animated_square_0.py  animated_square_0_static.py  animated_square_1.py  animated_square_1_static.py  eased_square.py  eased_square_static.py  interpolate.py  static.py
documentation/source/: animation.rst  api.rst  conf.py  easing.rst  image.rst  index.rst  introduction.rst  movement.rst  stroke.rst
superturtle/: image.py
tests/: test_superturtle.py
