[tool.poetry]
name = "superturtle"
version = "0.0.3"
description = "Extensions to Python's turtle"
authors = ["Chris Proctor <chris@chrisproctor.net>"]

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.0.1"
furo = "^2023.5.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
